[package]
name = "qurve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
tracing-serde = "0.1.3"
tracing-actix-web = "0.5.1"
serde = "1.0.137"